# fuzzy-finder

./: Cargo.toml  README.md
assets/data/: folder_blacklist.txt  whitelist.txt
src/: app.rs  fileops.rs  gruvbox.rs  main.rs
